Bug 424848 - "Cannot Initiate the konq Protocol" message when konqueror starts with blank url
Summary: "Cannot Initiate the konq Protocol" message when konqueror starts with blank url
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.97
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 424976 425516 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-31 06:33 UTC by Alan Prescott
Modified: 2020-09-08 16:11 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Prescott 2020-07-31 06:33:05 UTC
SUMMARY
Konqueror reports an error when opened with a blank URL - Unable to Create io-slave

STEPS TO REPRODUCE
1. open Konqueror with blank URL
2. 
3. 

OBSERVED RESULT
The requested operation could not be completed

Cannot Initiate the konq Protocol

Technical Reason: Unable to Create io-slave

Details of the Request:

URL: konq:blank
Protocol: konq
Date and Time: Friday, 31 July 2020 07:03:04 BST
Additional Information: klauncher said: Unknown protocol 'konq'.
Description:

The io-slave which provides access to the <strong>konq</strong> protocol could not be started. This is usually due to technical reasons.

Possible Causes:

klauncher could not find or start the plugin which provides the protocol.This means you may have an outdated version of the plugin.


EXPECTED RESULT
Should not report this as an error

SOFTWARE/OS VERSIONS
Operating System: openSUSE Leap 15.2
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.71.0
Qt Version: 5.12.7
Kernel Version: 5.3.18-lp152.33-default
OS Type: 64-bit
Processors: 12 × AMD Ryzen 5 1600 Six-Core Processor
Memory: 15.6 GiB of RAM

ADDITIONAL INFORMATION
Comment 1 Raphael Rosch 2020-08-18 05:55:29 UTC
I thought I was the only one with this problem. Confirmed on fc30 x86_64.

kf5-kio-core-5.68.0-3patched
qt5-5.12.5-1
Comment 2 Jíra Zlóňa 2020-08-23 14:51:22 UTC
I have the same problem.
openSUSE Tumbleweed
plasma-framework-5.72.0-1.1.x86_64
libQt5Core5-5.15.0-3.1.x86_64
libqt4-4.8.7-447.8.x86_64
Linux xxx 5.7.9-1-default #1 SMP Thu Jul 16 09:40:08 UTC 2020 (a010166) x86_64 x86_64 x86_64 GNU/Linux
Comment 3 Christoph Feck 2020-08-26 21:50:52 UTC
*** Bug 425516 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2020-08-26 21:51:21 UTC
*** Bug 424976 has been marked as a duplicate of this bug. ***
Comment 5 Stefano Crocco 2020-09-07 14:17:06 UTC
Which web engine are you using? Currently, the introduction page only works for the WebEngine engine.
Comment 6 Alan Prescott 2020-09-07 14:34:57 UTC
Default web browser engine: WebKit
Comment 7 Stefano Crocco 2020-09-07 14:57:33 UTC
This explains why it doesn't work. Previously, the intro page was based on KHTML. As that became deprecated, it was decided to move it inside WebEngine, since we assumed that there weren't people using KWebkitPart.

I'll see what can be done about this. Is WebEngine availlable on your system? it should be, as it's required to build Konqueror, but maybe some distributions decided to allow installing Konqueror without WebEngine.
Comment 8 Alan Prescott 2020-09-07 17:39:39 UTC
OK - I've found and installed package qtwebenginepart from the openSUSE Leap 15.2 repos which has added WebEngine as default browser engine and the error has gone.

Konqueror is no longer installed by default in openSUSE installs so I had to install it by hand and that didn't automatically install WebEngine.

WebEngine fixes things for me - thanks
Comment 9 Stefano Crocco 2020-09-07 18:39:40 UTC
Do you mean that you needed to compile Konqueror by hand or that you needed to manually install the Konqueror package? In the first case, there's something wrong with the Konqueror build system because it shouldn't even compile if QtWebEngine is not installed.
Comment 10 Alan Prescott 2020-09-07 20:05:27 UTC
Installed from package
Comment 11 Stefano Crocco 2020-09-08 10:22:00 UTC
In this case, I think the problem lies in the package itself because it should install QtWebEngine as dependency of Konqueror. It may be that the OpenSUSE packagers consciously decided to allow to run Konqueror without QtWebEngine, even if it's not a supported configuration. However, I believe that they should at least warn the users that they could run into problems like the one you reported.

I have found a way to solve this issue when you have a default web engine different from QtWebEngine, but it still requires QtWebEngine to be installed. To have the introduction page work without QtWebEngine installed is much more difficult, also because I'm not sure about the status of the alternative engines (KHTML is deprecated and I don't know if KWebKitPart is still maintained).
Comment 12 Bug Janitor Service 2020-09-08 13:34:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/31
Comment 13 Stefano Crocco 2020-09-08 16:11:00 UTC
Git commit ada1448288050107fd9e406a9f72993699e5253b by Stefano Crocco.
Committed on 08/09/2020 at 13:35.
Pushed by dfaure into branch 'master'.

Force using WebEnginePart to open konq: URLS

Without this, if the default HTML engine isn't WebEnginePart, when
opening a konq: URL, the user would get an error. Forcing the use of
WebEnginePart provides a workaround for this issue.

M  +8    -0    src/konqmainwindow.cpp

https://invent.kde.org/network/konqueror/commit/ada1448288050107fd9e406a9f72993699e5253b