Force using WebEnginePart to open konq: URLS

Without this, if the default HTML engine isn't WebEnginePart, when
opening a konq: URL, the user would get an error. Forcing the use of
WebEnginePart provides a workaround for this issue.

BUG: 424848